Bug 152307 - Content of row in a table is cut after Tools → Update → Update all
Summary: Content of row in a table is cut after Tools → Update → Update all
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2022-11-30 08:39 UTC by Robert Großkopf
Modified: 2023-12-02 11:39 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the document, goto page 13/14 and follow the bug description … (4.29 MB, application/vnd.oasis.opendocument.text)
2022-11-30 08:39 UTC, Robert Großkopf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2022-11-30 08:39:29 UTC
Created attachment 183907 [details]
Open the document, goto page 13/14 and follow the bug description …

Open the attached document.
Go to page 13/14.
There is a table which is splitted from p. 13 to p. 14.
Have a look at the last row. It will show two lines.

No go to Tools → Update → Update all

Go to page 13/14.
Table isn't splitted any more.
Last line isn't been shown any more.

This buggy behavior appears in 
Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

on OpenSUSE 15.3 64bit rpm Linux. It also appears in LO 7.3.*, 7.2.* and 7.1.0.3, doesn't appear in older versions like LO 7.0.5.2.

Note: If I export this document to *.pdf the content of last line will be shown at the bottom of page 13 under the border of the table …
Comment 1 Dieter 2022-12-13 07:50:52 UTC
I confirm it with

Version: 7.4.3.2 (x64) / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 raal 2022-12-13 17:31:28 UTC
No repro with Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 705b2924a14841883b4a8cac549f7af326d7a185
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but on my PC the pages with splitted table are pages 14-15
Comment 3 Robert Großkopf 2022-12-13 18:24:12 UTC
Same bug here with
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 98d8adc5b377039d5dee0d5046ece721010a960c
CPU threads: 6; OS: Linux 5.3; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

(In reply to raal from comment #2)
> 
> but on my PC the pages with splitted table are pages 14-15

Might be it is dependend on fonts, which are installed. On page 14 nearly half of the page is empty, because there is a picture and the header "Vorstand" on page 15.
Font is DejaVu Sans and some other from DejaVu.
Comment 4 zcrhonek 2023-02-17 16:21:22 UTC
bisected to c98acbb9671253ab8bbf4be75c3fa9993c5deceb is the first bad commit
commit c98acbb9671253ab8bbf4be75c3fa9993c5deceb
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Mon Nov 16 14:53:43 2020 -0800

    source b9ef71476fd70bc13f50ebe80390e0730d1b7afb

https://gerrit.libreoffice.org/c/core/+/105810

Adding CC to Michael Stahl
Comment 5 Gabor Kelemen (Collabora) 2023-02-23 12:49:58 UTC
Bibisected to:
tdf#134298 sw: layout: remove left-over page frame without content
Comment 6 Commit Notification 2023-08-02 09:36:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/06bbcee6e367d1bc319c1f9cb0e749168e4d890c

tdf#152307 sw: layout: invalidate more frames when footer grows

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2023-08-02 09:37:36 UTC
fixed on master
Comment 8 Commit Notification 2023-08-03 11:58:21 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/c2a86b88e71c0b4291cd813d9a53fa89a29ea8b9

tdf#152307 sw: layout: invalidate more frames when footer grows

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Dieter 2023-08-17 15:52:43 UTC
VERIFIED with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: e25e27c85ed970cdb97c468bdac86c80964f4231
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 10 Commit Notification 2023-12-02 11:39:52 UTC
EMartinGube committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c05bed53174ebc6f4e82838db9c2a7fcb587d3bd

tdf#152307 sw: layout: invalidate more frames when footer grows

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.